--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
-addopts = "-q --cov=src/starrocks_bbr --cov-report=term-missing"
+addopts = "-q --cov=src/starrocks_br --cov-report=term-missing"
 testpaths = ["tests"]
 
 [tool.coverage.run]
 branch = true
-source = ["src/starrocks_bbr"]
+source = ["src/starrocks_br"]
 
 [tool.coverage.report]
 omit = ["*/__init__.py"]
