--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "starrocks-br"
 version = "0.3.0"
 description = "StarRocks Backup and Restore automation tool"
+readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "click>=8.1.7,<9",
